tests/errors/syntax/function-no-brace.fn
---
Description: Function declaration with no opening brace
Expected: FN1007
---

type Broken
{
    fn test
}

type Program
{
    static fn Main -> i32
    {
        return 0
    }
}
